--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,7 @@ workflows:
         - deploy-heroku:
             requires:
               - cypress/run
+            filters:
+              branches:
+                only:
+                - main  
