--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
